--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -80,13 +80,13 @@
     <div class="container footer-container">
         &copy; 2022 - cinema - <a asp-area="" asp-page="/Privacy">Privacy</a>
         <a class="social-media" href="https://www.facebook.com/avans/">
-            <img src="imagesStyling/fb-bw.png" alt="fb" class="img-responsive"/>
+            <img src="~/imagesStyling/fb-bw.png" alt="fb" class="img-responsive"/>
         </a>
         <a class="social-media" href="https://www.instagram.com/avanshogeschool/?hl=en">
-            <img src="imagesStyling/ig-bw.png" alt="ig" class="img-responsive"/>
+            <img src="~/imagesStyling/ig-bw.png" alt="ig" class="img-responsive"/>
         </a>
         <a class="social-media" href="https://twitter.com/avanshogeschool?lang=en">
-            <img src="imagesStyling/tw-bw.png" alt="tw" class="img-responsive"/>
+            <img src="~/imagesStyling/tw-bw.png" alt="tw" class="img-responsive"/>
         </a>
     </div>
 </footer>
