--- a/cinema/cinema/Views/Home/index.cshtml
+++ b/cinema/cinema/Views/Home/index.cshtml
@@ -57,6 +57,7 @@
             },
             mousewheel: true,
             keyboard: true,
+            loop:true
           });
         </script>
 </div>
