--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                     <h4>Aanmelden voor nieuwsbrief</h4>
                     <form method="post" asp-action="Create" asp-controller="Subscribers">
                         <input name="email" type="text" placeholder="Email adres">
-                        <input type="submit" value="Aanmelden">
+                        <input type="submit" class="btn btn-primary" value="Aanmelden">
                     </form>
                 </div>
             </div>
