--- a/cinema/cinema/Views/Tickets/Index.cshtml
+++ b/cinema/cinema/Views/Tickets/Index.cshtml
@@ -89,7 +89,7 @@
         {
             <div class="col-md-3 mb-4">
                 <div class="card ticket">
-                    <div class="card-body">
+                    <div class="card-body text-black">
                         <h4 class="card-title">@item.show.Movie.Name</h4>
 
                         @if (item.Arrangements == Arrangements.normale)
