--- a/cinema/cinema/Views/_ViewImports.cshtml
+++ b/cinema/cinema/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@namespace cinema.Pages
+@using Microsoft.AspNetCore.Identity
+@using Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
