added layout file to all views

--- a/cinema/cinema/Views/Payment/Index.cshtml
+++ b/cinema/cinema/Views/Payment/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Afrekenen";
-    Layout = "_Layout";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     var costInCents = (int)ViewBag.Cost * 100;
 }
 
