--- a/cinema/cinema/Views/Home/Error.cshtml
+++ b/cinema/cinema/Views/Home/Error.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Error";
-    Layout = "../Shared/_Layout";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>title</h2>
