--- a/cinema/cinema/Views/RoomTemplates/Index.cshtml
+++ b/cinema/cinema/Views/RoomTemplates/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<cinema.Models.RoomTemplate>
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Index";
 }
 
