--- a/cinema/cinema/Views/Tickets/SeatSelection.cshtml
+++ b/cinema/cinema/Views/Tickets/SeatSelection.cshtml
@@ -33,7 +33,7 @@
                 }
                 if (selected)
                 {
-                    <div style="width:@seatwidth%;max-height:100%;margin:auto;"><img src ="~/imagesChair/chair_wheelchair_selected.png" style="max-width:100%;max-height:100%;"/> </div>
+                    <div style="width:calc(100%/@roommap.Max());max-height:100%;margin:auto;"><img src ="~/imagesChair/chair_wheelchair_selected.png" style="max-width:100%;max-height:100%;"/> </div>
                 }
                 else if(takenseats[row - 1].Contains(seat))
                 {
