--- a/cinema/cinema/Views/Tickets/Index.cshtml
+++ b/cinema/cinema/Views/Tickets/Index.cshtml
@@ -17,8 +17,8 @@
         <button class="print btn btn-secondary mx-3 w-100">
             <strong>Print de tickets</strong>
         </button>
-        <form method="get" class="mx-3 w-100">
-            <button class="print btn btn-secondary" asp-controller="Tickets" asp-action="SeatSelection">Stoelkeuze</button>
+        <form method="get" class="m-3 w-100 px-0">
+            <button class="print btn btn-secondary w-100" asp-controller="Tickets" asp-action="SeatSelection">Stoelkeuze</button>
             <input type="hidden" value="@ViewBag.OrderId" name="orderId">
         </form>
 
