--- a/cinema/cinema/Views/_ViewImports.cshtml
+++ b/cinema/cinema/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@namespace cinema.Pages
 @using Microsoft.AspNetCore.Identity
-@using Identity
+@using cinema.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
