--- a/cinema/cinema/Views/Administration/EditRole.cshtml
+++ b/cinema/cinema/Views/Administration/EditRole.cshtml
@@ -32,7 +32,7 @@
     </div>
 
     <div class="card">
-        <div class="card-header">
+        <div class="card-header text-dark">
             <h3>Users in this role</h3>
         </div>
         <div class="card-body">
