--- a/cinema/cinema/Views/Administration/EditUsersInRole.cshtml
+++ b/cinema/cinema/Views/Administration/EditUsersInRole.cshtml
@@ -7,10 +7,10 @@
 
 <form method="post">
     <div class="card">
-        <div class="card-header">
+        <div class="card-header text-dark">
             <h2>Add or remove users from this role</h2>
         </div>
-        <div class="card-body">
+        <div class="card-body text-dark">
             @for (int i = 0; i < Model.Count; i++)
             {
                 <div class="form-check m-1">
