--- a/cinema/cinema/Views/Administration/ListRoles.cshtml
+++ b/cinema/cinema/Views/Administration/ListRoles.cshtml
@@ -23,7 +23,9 @@
             </div>
             <div class="card-footer">
                 <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <form method="post" asp-action="DeleteRole" asp-route-id="@role.Id">
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete :@role.Name')">Delete</button>
+                    </form>
             </div>
         </div>
     }
