--- a/cinema/cinema/Views/MovieReview/Details.cshtml
+++ b/cinema/cinema/Views/MovieReview/Details.cshtml
@@ -1,17 +1,29 @@
+@model IEnumerable<cinema.Models.MovieReview>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Movie reviews";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
-</div>
-</body>
-</html>
+@*@if (Model.Any())
+{
+    string thisMovie = Model.Name;
+    foreach (var movieReview in Model)
+    {
+        <div class="card mb-3">
+            <div class="card-header text-dark">
+                User Id : @Movie.
+            </div>
+            <div class="card-body">
+                <h5 class="card-title text-dark">@user.UserName</h5>
+            </div>
+            <div class="card-footer">
+                <a asp-action="EditUser" asp-controller="Administration"
+                   asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete :@user.UserName')">Delete</button>
+                </form>
+            </div>
+        </div>
+    }
+}*@
