--- a/cinema/cinema/Views/Movies/ReviewsForMovie.cshtml
+++ b/cinema/cinema/Views/Movies/ReviewsForMovie.cshtml
@@ -151,7 +151,7 @@
         </div>
 
     }
-    <a asp-action="Create" asp-controller="Users"
+    <a asp-action="Create" asp-controller="MovieReviews"
           class="btn btn-primary mb-3" style="width:auto">
           Create Review
     </a>
