--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -52,6 +52,12 @@
                              <a class="nav-link" asp-area="" asp-controller="Movies" asp-action="Create">Film toevoegen</a>
                          </li>
                      }
+                     @if (_signInManager.IsSignedIn(User) && User.IsInRole("Kassamedewerker"))
+                     {
+                         <li class="nav-item">
+                             <a class="nav-link" asp-area="" asp-controller="LostAndFounds" asp-action="Index">Verloren voorwerpen</a>
+                         </li>
+                     }
                 </ul>
                      <ul class="navbar-nav ml-auto">
                                      
