--- a/cinema/cinema/Views/LostAndFounds/Index.cshtml
+++ b/cinema/cinema/Views/LostAndFounds/Index.cshtml
@@ -9,9 +9,10 @@
 
 
   @if(@ViewBag.LostObject != null)
-  {<div class="alert alert-primary" role="alert">
-    @ViewBag.LostObject <p>ligt nu meer dan vijf maanden in de lost and found, handig deze over aan de authoriteiten en verwijder het daarna uit het systeem</p>
-    </div>
+  {
+            <div class="alert alert-primary" role="alert">
+            @ViewBag.LostObject <p>ligt nu meer dan vijf maanden in de lost and found, handig alle objecten die langer dan 5 maanden in de lost and found liggen over aan de authoriteiten en verwijder deze daarna uit het systeem.</p>
+            </div>
   }
 
 
