abonnement works, correct prices displayed, Ticketcontroller and pricecalcservice updated

--- a/cinema/cinema/Views/Abonnements/Details.cshtml
+++ b/cinema/cinema/Views/Abonnements/Details.cshtml
@@ -53,13 +53,11 @@
 
     <script language="javascript">
         
-        var htmlEnd =
-                '</body>' +
-                '</html>';
+       
         var abonnement = document.querySelector('.abonnement');
         document.querySelector('.print').addEventListener('click', function (){
                              var WinPrint = window.open('', '', 'left=0,top=0,width=800,height=900,toolbar=0,scrollbars=0,status=0');
-                                           WinPrint.document.write(abonnement.innerHTML + htmlEnd);
+                                           WinPrint.document.write(abonnement.innerHTML);
                                            WinPrint.document.close();
                                            WinPrint.focus();
                                            WinPrint.print();
