--- a/cinema/cinema/Views/Tickets/Discount.cshtml
+++ b/cinema/cinema/Views/Tickets/Discount.cshtml
@@ -62,6 +62,8 @@
             </select>
         </label>
     </div>
+    <label class="col-md-2">Ik heb een abonnement</label>
+    <input type="checkbox" name ="abonnement" value="true" >  
     <div class="form-group">
         <input type="submit" value="Volgende" class="btn btn-primary"/>
     </div>
