--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -64,6 +64,13 @@
                              <a class="nav-link" asp-area="" asp-controller="Abonnements" asp-action="Index">Abonnementen</a>
                          </li>
                      }
+                      @if (_signInManager.IsSignedIn(User) && User.IsInRole("Bezoeker"))
+                     {   
+                         string username = @User.Identity.Name;
+                         <li class="nav-item">
+                             <a class="nav-link" asp-area="" asp-controller="Abonnements" asp-action="Myabonnement" asp-route-id="@username">Mijn Abonnement</a>
+                         </li>
+                     }
                 </ul>
                      <ul class="navbar-nav ml-auto">
                                      
