--- a/cinema/cinema/Views/Movies/Create.cshtml
+++ b/cinema/cinema/Views/Movies/Create.cshtml
@@ -63,6 +63,12 @@
                 <input asp-for="Language" class="form-control" />
                 <span asp-validation-for="Language" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Kijkwijzer" class="control-label"></label>
+                <input asp-for="Kijkwijzer" class="form-control" />
+                <span asp-validation-for="Kijkwijzer" class="text-danger"></span>
+                <p>Gebruik afkortingen, (AL = alle leeftijden)</p>
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="ThreeD" /> @Html.DisplayNameFor(model => model.ThreeD)
